PruebaTecnicaVueling/force-app/main/default/objects/Envio__c/Envio__c.object-meta.xml
<CustomObject>
    <label>Envio</label>
    <nameField>
        <label>Nombre de Envio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Envios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>