PruebaTecnicaVueling/force-app/main/default/objects/Envio__c/fields/Almacen__c.field-meta.xml
<CustomField>
    <fullName>Almacen__c</fullName>
    <label>Almacen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>