PruebaTecnicaVueling/force-app/main/default/objects/Envio__c/fields/AuditShipment__c.field-meta.xml
<CustomField>
    <fullName>AuditShipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AuditShipment</label>
    <referenceTo>AuditShipment__c</referenceTo>
    <relationshipLabel>Envios</relationshipLabel>
    <relationshipName>Envios</relationshipName>
    <type>Lookup</type>
</CustomField>