PruebaTecnicaVueling/force-app/main/default/objects/Envio__c/fields/Fecha_Envio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Envio__c</fullName>
    <label>Fecha_Envio</label>
    <type>Date</type>
</CustomField>