PruebaTecnicaVueling/force-app/main/default/objects/Envio__c/fields/Id_producto__c.field-meta.xml
<CustomField>
    <fullName>Id_producto__c</fullName>
    <label>Id_producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>